# sdc

./: README.txt  readme.txt
.backup/: car  car.hpp  car_utilities  car_utilities.cpp
src/: CMakeLists.txt  controller.cpp  ekf_observer.cpp  main.cpp  run.sh  sample.cpp
src/car/: car  car_utilities.cpp  cv_team.cpp  data.txt  parser.py  parser.py.save  test_car.cpp
src/development/car_backup/car/: CMakeLists.txt  CMakeLists.txt~  car  car.hpp  car_utilities.cpp  data.txt  test_car.cpp
src/development/car_model/: bicycle.txt  car  car.hpp  car.txt  car_utilities.cpp  cv_team.cpp  plotter.py  readme.txt  readme.txt~
src/ekf/: CMakeLists.txt~  ekf.hpp  ekf_utilities.cpp  invert_matrix.hpp  jacobian_cpp.m
src/lqr/: CMakeLists.txt  CMakeLists.txt~  lqr.cpp  lqr.hpp
src/plot/Sample/: data.txt  data_k.txt  data_s.txt  plotter.py
src/rrt/: naive_rrt.cpp  rrt  rrt.h  rrt_utilities.cpp
src/rrt/rrt_vector/: CMakeLists.txt  naive_rrt.cpp  rrt  rrt.h  rrt_utilities.cpp
src/tests/: matrix_check.cpp
src/utilities/: CMakeLists.txt  CMakeLists.txt~  matrix_printer.cpp
